# waypoint-tool

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
docs/: CONTRIBUTING.md  DEVELOPER_GUIDE.md  NAMING_CONVENTIONS.md  PLUGIN_DEVELOPMENT.md  REQUIREMENTS.md  TESTING_GUIDELINES.md  USER_MANUAL.md
python_sdk/: wpt_plugin.py
python_sdk/example_plugin/: main.py  manifest.json
python_sdk/line_generator/: main.py  manifest.json
python_sdk/rect_sweep_generator/: main.py  manifest.json
python_sdk/sweep_generator/: main.py  manifest.json
python_sdk/tests/: test_line_generator.py  test_rect_sweep_generator.py  test_sweep_generator.py  test_wpt_plugin.py
rust_plugins/sweep_generator_rs/: Cargo.toml  manifest.json
rust_plugins/sweep_generator_rs/src/: main.rs
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_wasm.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  plugins.rs
src-tauri/src/io/: mod.rs
src-tauri/src/map/: debug_test.rs  mod.rs
src-tauri/src/models/: mod.rs  options.rs
src-tauri/src/plugins/: manager.rs  mod.rs  models.rs  wasm_runner.rs
src/api/: backend.ts
src/components/canvas/: MapCanvas.test.tsx  MapCanvas.tsx  MapCanvasPlaceholder.tsx
src/components/ui/: ExportModal.test.tsx  ExportModal.tsx  LayerPanel.test.tsx  LayerPanel.tsx  NumericInput.tsx  PluginInputEditor.tsx  PluginParamsPanel.tsx  PluginPropertyEditor.tsx  PropertiesPanel.test.tsx  (+8 more)
src/stores/: appStore.test.ts  appStore.ts
src/types/: store.ts
